# rating-b

./: .git-blame-ignore-revs  .gitignore  Dockerfile  README.md  copy-performance-findings.md  crontab  fly.toml  manage.py  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
b/: models.py
b/management/commands/: calc_all_releases.py  calc_release.py
cron_scripts/: 2021.sh  2022.sh  2023.sh  2024.sh  2025.sh  2026.sh  eight_weeks.sh  recent.sh  refresh_views.sh  three_weeks.sh
dj/: manage.py  settings.py  urls.py
scripts/: changes.py  db_tools.py  main.py  players.py  teams.py  tools.py  tournament.py
tests/: test_release.py  test_roster_continuity.py  test_roster_deduplication.py  test_tools.py
