[project]
name = "rating-b"
version = "0.1.0"
description = ""
authors = [{name = "MAII", email = "it@maii.li"}]
license = {text = "GNU AGPL"}
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "asgiref==3.9.1",
    "black==25.1.0",
    "django==5.0.7",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "psycopg2-pool==1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "python-dotenv==1.1.1",
    "mmh3==5.1.0",
    "numpy==2.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["b", "dj", "scripts", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
