[project]
name = "rating-b"
version = "0.1.0"
description = ""
authors = [{name = "MAII", email = "it@maii.li"}]
license = {text = "GNU AGPL"}
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "django==5.0.7",
    "pandas==2.3.1",
    "psycopg2-binary==2.9.10",
    "psycopg2-pool==1.2",
    "python-dotenv==1.1.1",
    "mmh3==5.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["b", "dj", "scripts", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
